unpackaged/main/default/objects/Opportunity/fields/Account_2020_Strategic_Target_Rank__c.field-meta.xml
<CustomField>
    <fullName>Account_2020_Strategic_Target_Rank__c</fullName>
    <formula>Account.X2020_Strategic_Target_Rank__c</formula>
    <label>Account 2020 Strategic Target Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>