unpackaged/main/default/objects/Opportunity/fields/Account_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Name__c</fullName>
    <formula>Primary_Contact__r.FirstName&amp;" "&amp;Primary_Contact__r.LastName&amp;" at "&amp;Account.Name</formula>
    <label>Account, Contact Name</label>
    <type>Text</type>
</CustomField>