unpackaged/main/default/objects/Opportunity/fields/Account_Employees__c.field-meta.xml
<CustomField>
    <fullName>Account_Employees__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <label>Account Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>