unpackaged/main/default/objects/Opportunity/fields/Account_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Account_Fiscal_Year_End__c</fullName>
    <formula>Account.Fiscal_Year_End__c</formula>
    <label>Account Fiscal Year End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>