unpackaged/main/default/objects/Opportunity/fields/Account_Fortune_1000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Account_Fortune_1000_Rank__c</fullName>
    <formula>Account.Fortune_1000_Rank__c</formula>
    <label>Account Fortune 1000 Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>