unpackaged/main/default/objects/Opportunity/fields/Account_INC_5000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Account_INC_5000_Rank__c</fullName>
    <formula>Account.INC_5000_Rank__c</formula>
    <label>Account INC 5000 Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>