unpackaged/main/default/objects/Opportunity/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <formula>TEXT(Account.Industry)</formula>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>