unpackaged/main/default/objects/Opportunity/fields/Account_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Group__c</fullName>
    <formula>Account.Industry_Group__c</formula>
    <label>Account Industry Group</label>
    <type>Text</type>
</CustomField>