unpackaged/main/default/objects/Opportunity/fields/Account_Lifetime_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifetime_Account_Spend__c</fullName>
    <formula>Account.Lifetime_Account_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lifetime Account Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>