unpackaged/main/default/objects/Opportunity/fields/Account_Lifetime_Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifetime_Number_of_Orders__c</fullName>
    <formula>Account.Lifetime_Number_of_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lifetime Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>