unpackaged/main/default/objects/Opportunity/fields/Account_NAICS_2_Digit__c.field-meta.xml
<CustomField>
    <fullName>Account_NAICS_2_Digit__c</fullName>
    <formula>Account.NAICS_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account NAICS (2 Digit)</label>
    <type>Text</type>
</CustomField>