unpackaged/main/default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Reference field to Account  object's Owner</description>
    <label>Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>