unpackaged/main/default/objects/Opportunity/fields/Account_Owner_at_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_at_Closed_Won__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner at Closed Won</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>