unpackaged/main/default/objects/Opportunity/fields/Account_Owner_at_CW__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_at_CW__c</fullName>
    <description>Owner of the Account when an Opp is changed to CW</description>
    <label>Account Owner at CW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>