unpackaged/main/default/objects/Opportunity/fields/Account_Owner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to bring in the User's ID</description>
    <label>Account Owner Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>