unpackaged/main/default/objects/Opportunity/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <label>Account Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>