unpackaged/main/default/objects/Opportunity/fields/Account_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Account_Ownership__c</fullName>
    <formula>TEXT(Account.Ownership)</formula>
    <label>Account Ownership</label>
    <type>Text</type>
</CustomField>