unpackaged/main/default/objects/Opportunity/fields/Account_R_D_1000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Account_R_D_1000_Rank__c</fullName>
    <formula>Account.R_D_1000_Rank__c</formula>
    <label>Account R&amp;D 1000 Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>