unpackaged/main/default/objects/Opportunity/fields/Account_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sector__c</fullName>
    <formula>Account.Sector__c</formula>
    <label>Account Sector</label>
    <type>Text</type>
</CustomField>