unpackaged/main/default/objects/Opportunity/fields/Account_SIC__c.field-meta.xml
<CustomField>
    <fullName>Account_SIC__c</fullName>
    <formula>Account.Sic</formula>
    <label>Account SIC</label>
    <type>Text</type>
</CustomField>