unpackaged/main/default/objects/Opportunity/fields/Account_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry__c</fullName>
    <formula>Account.Sub_Industry__c</formula>
    <label>Account Sub-Industry</label>
    <type>Text</type>
</CustomField>