unpackaged/main/default/objects/Opportunity/fields/Account_Tags__c.field-meta.xml
<CustomField>
    <fullName>Account_Tags__c</fullName>
    <formula>Account.Tags__c</formula>
    <label>Account Tags</label>
    <type>Text</type>
</CustomField>