unpackaged/main/default/objects/Opportunity/fields/Account_Year_Started__c.field-meta.xml
<CustomField>
    <fullName>Account_Year_Started__c</fullName>
    <formula>Account.Year_Started_Cust__c</formula>
    <label>Account Year Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>