unpackaged/main/default/objects/Opportunity/fields/AccountOwnerOnCreation__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerOnCreation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner On Creation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>