unpackaged/main/default/objects/Opportunity/fields/AccountOwnerOnCreationRole__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerOnCreationRole__c</fullName>
    <label>Account Owner On Creation Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>