unpackaged/main/default/objects/Opportunity/fields/Actively_Being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Actively_Being_Sequenced__c</fullName>
    <formula>Primary_Contact__r.Outreach_Actively_Being_Sequenced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actively Being Sequenced</label>
    <type>Checkbox</type>
</CustomField>