unpackaged/main/default/objects/Opportunity/fields/Closed_By_System_Order__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_System_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether an order occured that caused the opportunity to be closed.</description>
    <label>Closed By System Order</label>
    <type>Checkbox</type>
</CustomField>