unpackaged/main/default/objects/Opportunity/fields/Color_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Color_Indicator__c</fullName>
    <description>Color to Indicate if Opportunity is passed its closed date</description>
    <formula>IF( !OR( ISPICKVAL(StageName,'Closed Won'),ISPICKVAL(StageName, 'Closed Lost')), IF( TODAY()  &gt; CloseDate , 'RED', 'GREEN'),'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field indicates if an Open Opportunity is past its closed date.</inlineHelpText>
    <label>Color Indicator</label>
    <type>Text</type>
</CustomField>