unpackaged/main/default/objects/Opportunity/fields/Commission_Owner_LKP__c.field-meta.xml
<CustomField>
    <fullName>Commission_Owner_LKP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is stamped at the time of order being placed for commission owners regardless of opp owner changes.</description>
    <label>Commission Owner LKP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Com</relationshipName>
    <type>Lookup</type>
</CustomField>