unpackaged/main/default/objects/Opportunity/fields/Commission_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Commission_Owner_Role__c</fullName>
    <label>Commission Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>