unpackaged/main/default/objects/Opportunity/fields/Commissionable_Total__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Total__c</fullName>
    <formula>SubTotal__c - Order_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissionable Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>