unpackaged/main/default/objects/Opportunity/fields/Company_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Category__c</fullName>
    <formula>Account.Company_Category__c</formula>
    <label>Company Category</label>
    <type>Text</type>
</CustomField>