unpackaged/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProtoLabs / RAPID</fullName>
            </value>
            <value>
                <fullName>Stratasys Direct</fullName>
            </value>
            <value>
                <fullName>3D Systems</fullName>
            </value>
            <value>
                <fullName>Fast Radius</fullName>
            </value>
            <value>
                <fullName>MakeTime</fullName>
            </value>
            <value>
                <fullName>Fictiv</fullName>
            </value>
            <value>
                <fullName>Plethora</fullName>
            </value>
            <value>
                <fullName>Shapeways</fullName>
            </value>
            <value>
                <fullName>Sculpteo</fullName>
            </value>
            <value>
                <fullName>Building in-house</fullName>
            </value>
            <value>
                <fullName>Local supplier</fullName>
            </value>
            <value>
                <fullName>International supplier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>