unpackaged/main/default/objects/Opportunity/fields/Conformance_Cert__c.field-meta.xml
<CustomField>
    <fullName>Conformance_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Opp/Quote is flagged to be Conformance Certified</inlineHelpText>
    <label>Conformance Cert</label>
    <type>Checkbox</type>
</CustomField>