unpackaged/main/default/objects/Opportunity/fields/ConversionLikelihood__c.field-meta.xml
<CustomField>
    <fullName>ConversionLikelihood__c</fullName>
    <formula>if(ISBLANK(ConversionProbability__c), ' ',   
if (ConversionProbability__c &gt; 0.31, 'High', if(ConversionProbability__c &gt; 0.147, 'Medium', 'Low')))</formula>
    <label>Conversion Likelihood</label>
    <type>Text</type>
</CustomField>