unpackaged/main/default/objects/Opportunity/fields/COVID_19_Project__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COVID-19 Project</label>
    <type>Checkbox</type>
</CustomField>