unpackaged/main/default/objects/Opportunity/fields/Current_Stage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Start_Date__c</fullName>
    <description>This  field holds the Date the Stage enters the current stage.</description>
    <label>Current Stage Start Date</label>
    <type>Date</type>
</CustomField>