unpackaged/main/default/objects/Opportunity/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <formula>Today() -  Current_Stage_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>