unpackaged/main/default/objects/Opportunity/fields/DFAR__c.field-meta.xml
<CustomField>
    <fullName>DFAR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Opp/Quote is flagged to be DFAR controlled</inlineHelpText>
    <label>DFAR</label>
    <type>Checkbox</type>
</CustomField>