unpackaged/main/default/objects/Opportunity/fields/DFM_Description__c.field-meta.xml
<CustomField>
    <fullName>DFM_Description__c</fullName>
    <label>DFM Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>