unpackaged/main/default/objects/Opportunity/fields/Domestic_Cert__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Opp/Quote is flagged to be Domestic Certfied</inlineHelpText>
    <label>Domestic Cert</label>
    <type>Checkbox</type>
</CustomField>