unpackaged/main/default/objects/Opportunity/fields/ERP_Order_Url__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Url__c</fullName>
    <formula>IF( NOT(ISBLANK(Order_ERP_Xom_ID__c )),HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+Order_ERP_Xom_ID__c+"&amp;n_columns=" +  $Label.Orders_Datatable_Column_Length,"Go to this Order in the ERP", "_blank"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Order Url</label>
    <type>Text</type>
</CustomField>