unpackaged/main/default/objects/Opportunity/fields/ERP_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>ERP_Quote_URL__c</fullName>
    <formula>HYPERLINK("https://www.xometry.com/staff/quotes-list/?search="+ Last_Quote_Xometry_ERP_ID__c +"&amp;rowsPerPage=25&amp;page=1&amp;sortBy=last_updated&amp;sortDirection=desc","Go to this Quote in the ERP", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Quote URL</label>
    <type>Text</type>
</CustomField>