unpackaged/main/default/objects/Opportunity/fields/FDMSize__c.field-meta.xml
<CustomField>
    <fullName>FDMSize__c</fullName>
    <description>If the quote is for an FDM Part, then this field reflects the size category for that Quote</description>
    <label>FDM Part Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>