unpackaged/main/default/objects/Opportunity/fields/First_Order__c.field-meta.xml
<CustomField>
    <fullName>First_Order__c</fullName>
    <formula>and(CloseDate =  Primary_Contact__r.Contact_s_Date_of_First_Order__c ,  ispickval(StageName,"Closed Won"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Order?</label>
    <type>Checkbox</type>
</CustomField>