unpackaged/main/default/objects/Opportunity/fields/First_Quote__c.field-meta.xml
<CustomField>
    <fullName>First_Quote__c</fullName>
    <formula>datevalue(CreatedDate) =  Primary_Contact__r.First_Quote_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Quote?</label>
    <type>Checkbox</type>
</CustomField>