unpackaged/main/default/objects/Opportunity/fields/FirstQuoterEmail__c.field-meta.xml
<CustomField>
    <fullName>FirstQuoterEmail__c</fullName>
    <description>Email address of the person who created the quote</description>
    <label>First Quoter Email</label>
    <type>Email</type>
</CustomField>