unpackaged/main/default/objects/Opportunity/fields/FirstQuoterStaffFlag__c.field-meta.xml
<CustomField>
    <fullName>FirstQuoterStaffFlag__c</fullName>
    <description>Checks if the first quoter is staff</description>
    <formula>(CONTAINS( LOWER(FirstQuoterEmail__c), '@xometry')) ||
(CONTAINS( LOWER(FirstQuoterEmail__c), '@thomasnet.com'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Quoter Staff Flag</label>
    <type>Checkbox</type>
</CustomField>