unpackaged/main/default/objects/Opportunity/fields/FirstQuoterUser__c.field-meta.xml
<CustomField>
    <fullName>FirstQuoterUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Quoter User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>