unpackaged/main/default/objects/Opportunity/fields/FirstQuoterUserRole__c.field-meta.xml
<CustomField>
    <fullName>FirstQuoterUserRole__c</fullName>
    <formula>FirstQuoterUser__r.UserRole.Name</formula>
    <label>First Quoter User Role</label>
    <type>Text</type>
</CustomField>