unpackaged/main/default/objects/Opportunity/fields/FirstSalesOwner__c.field-meta.xml
<CustomField>
    <fullName>FirstSalesOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>