unpackaged/main/default/objects/Opportunity/fields/FirstSalesOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>FirstSalesOwnerRole__c</fullName>
    <label>First Sales Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>