unpackaged/main/default/objects/Opportunity/fields/Generic_Account__c.field-meta.xml
<CustomField>
    <fullName>Generic_Account__c</fullName>
    <formula>IF(Account.Generic_Account__c = TRUE,"True","False")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic Account</label>
    <type>Text</type>
</CustomField>