unpackaged/main/default/objects/Opportunity/fields/Get_2D_Order_URL__c.field-meta.xml
<CustomField>
    <fullName>Get_2D_Order_URL__c</fullName>
    <formula>IF( NOT(ISBLANK( Order_ERP_Xom_ID__c )),HYPERLINK("https://get.xometry.com/rfq/review/"+Order_ERP_Xom_ID__c ,"Go to this Quote in the Get Site", "_blank"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get 2D Order URL</label>
    <type>Text</type>
</CustomField>