unpackaged/main/default/objects/Opportunity/fields/Get_Order_Url__c.field-meta.xml
<CustomField>
    <fullName>Get_Order_Url__c</fullName>
    <formula>IF( NOT(ISBLANK( Order_ERP_Xom_ID__c  )),HYPERLINK("https://get.xometry.com/quote/"+ Order_ERP_Xom_ID__c ,"Go to this Order in the Get Site", "_blank"),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Order Url</label>
    <type>Text</type>
</CustomField>