unpackaged/main/default/objects/Opportunity/fields/Get_Quote_Url__c.field-meta.xml
<CustomField>
    <fullName>Get_Quote_Url__c</fullName>
    <formula>IF( NOT(ISBLANK(Last_Quote_Xometry_ERP_ID__c)),(HYPERLINK("https://www.xometry.com/login?domain=GET&amp;destination=/quote/"+ Last_Quote_Xometry_ERP_ID__c  ,"Go to this Quote in the Get Site", "_blank")),"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Quote Url</label>
    <type>Text</type>
</CustomField>