unpackaged/main/default/objects/Opportunity/fields/getSite_Deleted__c.field-meta.xml
<CustomField>
    <fullName>getSite_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>getSite Deleted</label>
    <type>Checkbox</type>
</CustomField>