unpackaged/main/default/objects/Opportunity/fields/GNOOwnerforSupplyOpps__c.field-meta.xml
<CustomField>
    <fullName>GNOOwnerforSupplyOpps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GNO Owner for Supply Opps</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsGNOSupplyMaterialOppOwner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>GNO Supply Material Owner flag True on User Object.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SupplyOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>