unpackaged/main/default/objects/Opportunity/fields/Hardware_Cert__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a Quote/Order has the Certification marked Hardware</description>
    <label>Hardware Cert</label>
    <type>Checkbox</type>
</CustomField>