unpackaged/main/default/objects/Opportunity/fields/has_ordered_Other__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_ordered_Other</label>
    <type>Checkbox</type>
</CustomField>