unpackaged/main/default/objects/Opportunity/fields/has_ordered_Other_NotIncluded__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Other_NotIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_ordered_Other (Not Included)</label>
    <type>Checkbox</type>
</CustomField>