unpackaged/main/default/objects/Opportunity/fields/has_ordered_PolyJet_3D_c__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_PolyJet_3D_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[dnu] has_ordered_PolyJet_3D</label>
    <type>Checkbox</type>
</CustomField>