unpackaged/main/default/objects/Opportunity/fields/has_ordered_SLA_c__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_SLA_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[dnu] has_ordered_SLA</label>
    <type>Checkbox</type>
</CustomField>