unpackaged/main/default/objects/Opportunity/fields/has_quoted_Injection_Molding_Tool__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Injection_Molding_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has_quoted_Injection_Molding_Tool</label>
    <type>Checkbox</type>
</CustomField>