unpackaged/main/default/objects/Opportunity/fields/HasDelrinMat__c.field-meta.xml
<CustomField>
    <fullName>HasDelrinMat__c</fullName>
    <description>Has Delrin Material?</description>
    <formula>JobId__r.HasDelrinMat__c</formula>
    <label>Has Delrin Mat</label>
    <type>Checkbox</type>
</CustomField>