unpackaged/main/default/objects/Opportunity/fields/HasTitaniumMat__c.field-meta.xml
<CustomField>
    <fullName>HasTitaniumMat__c</fullName>
    <description>Has TitaniumMat?</description>
    <formula>JobId__r.HasTitaniumMat__c</formula>
    <label>Has Titanium Mat</label>
    <type>Checkbox</type>
</CustomField>