unpackaged/main/default/objects/Opportunity/fields/High_Impact_Opp__c.field-meta.xml
<CustomField>
    <fullName>High_Impact_Opp__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[do not use] High Impact Opp</label>
    <type>Checkbox</type>
</CustomField>