unpackaged/main/default/objects/Opportunity/fields/Hold_Op_to_Prior_Owner__c.field-meta.xml
<CustomField>
    <fullName>Hold_Op_to_Prior_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Op to Prior Owner</label>
    <type>Checkbox</type>
</CustomField>